Fix comment overflow

--- a/src/components/Comment/Comment.module.css
+++ b/src/components/Comment/Comment.module.css
@@ -1,3 +1,7 @@
+.wrapper {
+  padding: 2px 0;
+}
+
 .author {
   position: relative;
   padding-left: 24px;
